made changes to entities, overrided service save methods, added integration capabilities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #ServerPort
 server.port=8080
 
+spring.application.name=school-service
+
 #prefix
 server.servlet.context-path=/api/
 
@@ -10,3 +12,22 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123Konushefci.
+
+#amqp
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#exchanges:
+exchange.direct=direct-exchange
+
+#queues:
+queue.user.new.student=queue.user.new.student
+queue.user.new.teacher=queue.user.new.teacher
+queue.user.new.admin=queue.user.new.admin
+queue.connection.teacher.subject=queue.connection.teacher.subject
+
+#routing-keys
+routing.connection.teacher.subject=connection.teacher.subject
+routing.notification=notification
