--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,12 @@ server.port=8080
 
 spring.application.name=school-service
 
-#prefix
-server.servlet.context-path=/api/
-
 #MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123Konushefci.
+spring.datasource.password=rinori123
 
 #amqp
 spring.rabbitmq.host=localhost
@@ -31,3 +28,5 @@ queue.connection.teacher.subject=queue.connection.teacher.subject
 #routing-keys
 routing.connection.teacher.subject=connection.teacher.subject
 routing.notification=notification
+
+spring.jackson.serialization.fail-on-empty-beans=false
