--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #ServerPort
-server.port=8080
+server.port=8081
 
 spring.application.name=school-service
 
@@ -8,16 +8,19 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=rinori123
+spring.datasource.password=toor
 
 #amqp
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=192.168.0.138
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 #exchanges:
 exchange.direct=direct-exchange
+
+#eurekaClient
+eureka.client.serviceUrl.defaultZone=http://192.168.0.138:8761/eureka/
 
 #queues:
 queue.user.new.student=queue.user.new.student
