fixedd some relations between entities and completed the DTOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #ServerPort
-server.port=8081
+server.port=8080
 
 spring.application.name=school-service
 
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.password=rinori123
 
 #amqp
 spring.rabbitmq.host=192.168.0.138
