--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=rinori123
 
 #amqp
-spring.rabbitmq.host=192.168.0.138
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -19,17 +19,19 @@ spring.rabbitmq.password=guest
 #exchanges:
 exchange.direct=direct-exchange
 
-#eurekaClient
-eureka.client.serviceUrl.defaultZone=http://192.168.0.138:8761/eureka/
-
 #queues:
 queue.user.new.student=queue.user.new.student
 queue.user.new.teacher=queue.user.new.teacher
 queue.user.new.admin=queue.user.new.admin
 queue.connection.teacher.subject=queue.connection.teacher.subject
+queue.notification=queue.notification;
 
 #routing-keys
 routing.connection.teacher.subject=connection.teacher.subject
 routing.notification=notification
+
+#binding-keys
+binding.connection.teacher.subject=connection.teacher.subject
+binding.notification=notification
 
 spring.jackson.serialization.fail-on-empty-beans=false
